@@ -1,3 +1,8 @@
+Wed Sep 20 11:50:35 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* krb5_decode.c (setup_buf_only): Declare cleanup routine as
+		void and propogate through file.
+
 Mon Sep 18 14:17:15 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* asn1_encode.c (asn1_encode_generaltime): Don't modify a const
